--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-# Build files
+# Build output
 build/
 dist/
 *.o
 *.obj
 
-# IDE specific files
+# IDE files
 .vscode/
 .idea/
 *.iml
@@ -13,3 +13,15 @@ dist/
 __pycache__/
 *.pyc
 node_modules/
+
+# Environment
+.env
+.env.local
+
+# Logs
+*.log
+npm-debug.log*
+
+# OS specific
+.DS_Store
+Thumbs.db
